src/main/java/org/example/ninja/NinjaParser.java
// Generated from src/main/java/org/example/ninja/Ninja.g4 by ANTLR 4.13.2

package org.example.ninja;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class NinjaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, SIMPLE_IDENTIFY=13, IDENTIFY=14, VALUE=15, 
		WS=16, NL=17;
	public static final int
		RULE_ninja = 0, RULE_assign = 1, RULE_variable = 2, RULE_rule = 3, RULE_rule_name = 4, 
		RULE_pool = 5, RULE_pool_name = 6, RULE_build = 7, RULE_target = 8, RULE_depdency = 9, 
		RULE_build_values = 10, RULE_build_value = 11, RULE_build_rule = 12, RULE_scope = 13, 
		RULE_scope_line = 14, RULE_scope_assign = 15, RULE_scope_variable = 16, 
		RULE_comment = 17, RULE_include = 18, RULE_submodule = 19, RULE_file = 20, 
		RULE_default = 21, RULE_assign_value_lines = 22, RULE_assign_value_line = 23, 
		RULE_assign_values = 24, RULE_values = 25, RULE_value = 26, RULE_escape = 27, 
		RULE_escape_nl = 28, RULE_identify = 29, RULE_keyword = 30, RULE_ws = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"ninja", "assign", "variable", "rule", "rule_name", "pool", "pool_name", 
			"build", "target", "depdency", "build_values", "build_value", "build_rule", 
			"scope", "scope_line", "scope_assign", "scope_variable", "comment", "include", 
			"submodule", "file", "default", "assign_value_lines", "assign_value_line", 
			"assign_values", "values", "value", "escape", "escape_nl", "identify", 
			"keyword", "ws"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'rule'", "'pool'", "'build'", "':'", "'#'", "'include'", 
			"'submodule'", "'default'", "'$'", "'${'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "SIMPLE_IDENTIFY", "IDENTIFY", "VALUE", "WS", "NL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Ninja.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NinjaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NinjaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(NinjaParser.EOF, 0); }
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public List<RuleContext> rule_() {
			return getRuleContexts(RuleContext.class);
		}
		public RuleContext rule_(int i) {
			return getRuleContext(RuleContext.class,i);
		}
		public List<PoolContext> pool() {
			return getRuleContexts(PoolContext.class);
		}
		public PoolContext pool(int i) {
			return getRuleContext(PoolContext.class,i);
		}
		public List<BuildContext> build() {
			return getRuleContexts(BuildContext.class);
		}
		public BuildContext build(int i) {
			return getRuleContext(BuildContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<SubmoduleContext> submodule() {
			return getRuleContexts(SubmoduleContext.class);
		}
		public SubmoduleContext submodule(int i) {
			return getRuleContext(SubmoduleContext.class,i);
		}
		public List<DefaultContext> default_() {
			return getRuleContexts(DefaultContext.class);
		}
		public DefaultContext default_(int i) {
			return getRuleContext(DefaultContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(NinjaParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(NinjaParser.NL, i);
		}
		public NinjaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ninja; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterNinja(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitNinja(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitNinja(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NinjaContext ninja() throws RecognitionException {
		NinjaContext _localctx = new NinjaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ninja);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 156636L) != 0)) {
				{
				setState(73);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SIMPLE_IDENTIFY:
				case IDENTIFY:
					{
					setState(64);
					assign();
					}
					break;
				case T__1:
					{
					setState(65);
					rule_();
					}
					break;
				case T__2:
					{
					setState(66);
					pool();
					}
					break;
				case T__3:
					{
					setState(67);
					build();
					}
					break;
				case T__5:
					{
					setState(68);
					comment();
					}
					break;
				case T__6:
					{
					setState(69);
					include();
					}
					break;
				case T__7:
					{
					setState(70);
					submodule();
					}
					break;
				case T__8:
					{
					setState(71);
					default_();
					}
					break;
				case NL:
					{
					setState(72);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public Assign_value_linesContext assign_value_lines() {
			return getRuleContext(Assign_value_linesContext.class,0);
		}
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_assign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			variable();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(81);
				ws();
				}
			}

			setState(84);
			match(T__0);
			setState(85);
			assign_value_lines();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public IdentifyContext identify() {
			return getRuleContext(IdentifyContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			identify();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RuleContext extends ParserRuleContext {
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public Rule_nameContext rule_name() {
			return getRuleContext(Rule_nameContext.class,0);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public RuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleContext rule_() throws RecognitionException {
		RuleContext _localctx = new RuleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__1);
			setState(90);
			ws();
			setState(91);
			rule_name();
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(92);
				scope();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Rule_nameContext extends ParserRuleContext {
		public IdentifyContext identify() {
			return getRuleContext(IdentifyContext.class,0);
		}
		public Rule_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterRule_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitRule_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitRule_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rule_nameContext rule_name() throws RecognitionException {
		Rule_nameContext _localctx = new Rule_nameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rule_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			identify();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PoolContext extends ParserRuleContext {
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public Pool_nameContext pool_name() {
			return getRuleContext(Pool_nameContext.class,0);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public PoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterPool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitPool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitPool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PoolContext pool() throws RecognitionException {
		PoolContext _localctx = new PoolContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pool);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__2);
			setState(98);
			ws();
			setState(99);
			pool_name();
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(100);
				scope();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pool_nameContext extends ParserRuleContext {
		public IdentifyContext identify() {
			return getRuleContext(IdentifyContext.class,0);
		}
		public Pool_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pool_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterPool_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitPool_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitPool_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pool_nameContext pool_name() throws RecognitionException {
		Pool_nameContext _localctx = new Pool_nameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pool_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			identify();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BuildContext extends ParserRuleContext {
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public Build_ruleContext build_rule() {
			return getRuleContext(Build_ruleContext.class,0);
		}
		public DepdencyContext depdency() {
			return getRuleContext(DepdencyContext.class,0);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public BuildContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_build; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterBuild(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitBuild(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitBuild(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BuildContext build() throws RecognitionException {
		BuildContext _localctx = new BuildContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_build);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__3);
			setState(106);
			ws();
			setState(107);
			target();
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(108);
				ws();
				}
			}

			setState(111);
			match(T__4);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(112);
				ws();
				}
			}

			setState(115);
			build_rule();
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(116);
				ws();
				setState(117);
				depdency();
				}
				break;
			}
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(121);
				ws();
				}
			}

			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(124);
				scope();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TargetContext extends ParserRuleContext {
		public Build_valuesContext build_values() {
			return getRuleContext(Build_valuesContext.class,0);
		}
		public TargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_target; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterTarget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitTarget(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitTarget(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TargetContext target() throws RecognitionException {
		TargetContext _localctx = new TargetContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_target);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			build_values();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DepdencyContext extends ParserRuleContext {
		public Build_valuesContext build_values() {
			return getRuleContext(Build_valuesContext.class,0);
		}
		public DepdencyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_depdency; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterDepdency(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitDepdency(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitDepdency(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DepdencyContext depdency() throws RecognitionException {
		DepdencyContext _localctx = new DepdencyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_depdency);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			build_values();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Build_valuesContext extends ParserRuleContext {
		public List<Build_valueContext> build_value() {
			return getRuleContexts(Build_valueContext.class);
		}
		public Build_valueContext build_value(int i) {
			return getRuleContext(Build_valueContext.class,i);
		}
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public Build_valuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_build_values; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterBuild_values(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitBuild_values(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitBuild_values(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Build_valuesContext build_values() throws RecognitionException {
		Build_valuesContext _localctx = new Build_valuesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_build_values);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			build_value();
			setState(137);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(132);
					ws();
					setState(133);
					build_value();
					}
					} 
				}
				setState(139);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Build_valueContext extends ParserRuleContext {
		public List<IdentifyContext> identify() {
			return getRuleContexts(IdentifyContext.class);
		}
		public IdentifyContext identify(int i) {
			return getRuleContext(IdentifyContext.class,i);
		}
		public List<TerminalNode> VALUE() { return getTokens(NinjaParser.VALUE); }
		public TerminalNode VALUE(int i) {
			return getToken(NinjaParser.VALUE, i);
		}
		public List<EscapeContext> escape() {
			return getRuleContexts(EscapeContext.class);
		}
		public EscapeContext escape(int i) {
			return getRuleContext(EscapeContext.class,i);
		}
		public Build_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_build_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterBuild_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitBuild_value(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitBuild_value(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Build_valueContext build_value() throws RecognitionException {
		Build_valueContext _localctx = new Build_valueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_build_value);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(143); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(143);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case SIMPLE_IDENTIFY:
					case IDENTIFY:
						{
						setState(140);
						identify();
						}
						break;
					case VALUE:
						{
						setState(141);
						match(VALUE);
						}
						break;
					case T__9:
					case T__10:
						{
						setState(142);
						escape();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(145); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Build_ruleContext extends ParserRuleContext {
		public IdentifyContext identify() {
			return getRuleContext(IdentifyContext.class,0);
		}
		public Build_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_build_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterBuild_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitBuild_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitBuild_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Build_ruleContext build_rule() throws RecognitionException {
		Build_ruleContext _localctx = new Build_ruleContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_build_rule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			identify();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScopeContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(NinjaParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(NinjaParser.NL, i);
		}
		public List<Scope_lineContext> scope_line() {
			return getRuleContexts(Scope_lineContext.class);
		}
		public Scope_lineContext scope_line(int i) {
			return getRuleContext(Scope_lineContext.class,i);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NinjaVisitor ) return ((NinjaVisitor<? extends T>)visitor).visitScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_scope);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(151); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(149);
					match(NL);
					setState(150);
					scope_line();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(153); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
